Experimenting with annotation processing in ECS